samples/_failures_safe/1761194611_aaa936_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8a06355e.c:187: error: expected ‘;’, ‘,’ or ‘)’ at end of input
